compiler/tests/success/cryptoline/subarray.jazz
fn f (reg u64 x) -> reg u64 {
   stack u64[3] t;
   stack u64[2] t1;
   inline int i;

   for i = 0 to 3 { 
     t[i] = x;
   }  

   t1 = t[0:2];
   t1[0] = 1;
   t[0:2] = t1;

   for i = 0 to 3 { 
     x += t[i];
   }  

   return x;
}
