compiler/tests/fail/stack_allocation/x86-64/non_constant_index.jazz
export
fn f (reg u64 i) -> reg u64 {
  reg u64 res;
  stack u64[2] a;
  stack u64[2] b;
  a[0]=0;
  b[(int)i:2] = a[0:2];
  res = b[0];
  return res;
}
